# pytest-jux

./: .codecov.yml  .editorconfig  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CLAUDE.md  DOGFOODING.md  Makefile  PROJECT_INIT_SUMMARY.md  QUICKSTART.md  README.md  SECURITY.md  SECURITY_FRAMEWORK_COMPLETE.md  codecov.yml  dogfood-output.txt  init-git.sh  pyproject.toml
.github/: DOC_REVIEW_CHECKLIST.md  RELEASE_TEMPLATE.md  dependabot.yml
.github/workflows/: build-release.yml  security.yml  test.yml
.jux-dogfood/: jux.conf
completions/: README.md  jux.bash  jux.fish  jux.zsh
docs/: NAVIGATION.md  ROADMAP.md  conf.py  index.md
docs/adr/: 0001-record-architecture-decisions.md  0002-adopt-development-best-practices.md  0003-use-python3-pytest-lxml-signxml-sqlalchemy-stack.md  0004-adopt-apache-license-2.0.md  0005-adopt-python-ecosystem-security-framework.md  0006-adopt-slsa-build-level-2-compliance.md  0007-adopt-test-coverage-visibility-standards.md  0008-adopt-openssf-best-practices-badge-program.md  0009-adopt-reuse-spdx-license-identifiers.md  0010-remove-database-dependencies.md  0011-integrate-metadata-with-pytest-metadata.md  README.md
docs/architecture/: workspace.dsl  workspace.json
docs/architecture/static/: workspace.js
docs/explanation/: architecture.md  performance.md  security.md  understanding-pytest-jux.md
docs/howto/: add-metadata-to-reports.md  backup-restore-keys.md  choosing-storage-modes.md  ci-cd-deployment.md  integrate-pytest-plugins.md  manage-report-cache.md  migrate-storage-paths.md  multi-environment-config.md  pypi-trusted-publishing-setup.md  rotate-signing-keys.md  secure-key-storage.md  troubleshooting.md
docs/reference/: configuration.md  error-codes.md
docs/reference/api/: canonicalizer.md  config.md  index.md  metadata.md  plugin.md  signer.md  storage.md  verifier.md
docs/reference/api/_autosummary/: pytest_jux.canonicalizer.rst  pytest_jux.config.rst  pytest_jux.metadata.rst  pytest_jux.plugin.rst  pytest_jux.signer.rst  pytest_jux.storage.rst  pytest_jux.verifier.rst
docs/reference/cli/: index.md
docs/release-notes/: README.md  v0.3.0.md
docs/research/: README.md  digital-signature-provenance.md  pytest-jux-signing-implementation.md  xmldsig-gpg-compatibility.md
docs/security/: CRYPTO_STANDARDS.md  IMPLEMENTATION_SUMMARY.md  OPENSSF_BADGE_READINESS.md  SECURITY.md  SLSA_VERIFICATION.md  THREAT_MODEL.md
docs/sprints/: INTEGRATION_TEST_RESULTS.md  sprint-01-core-infrastructure.md  sprint-012-api-gap-analysis.md  sprint-012-project-plan.md  sprint-02-cli-tools.md  sprint-03-api-client-publishing.md  sprint-03-retrospective.md  sprint-04-api-integration.md  sprint-05-addendum-ci-fixes.md  sprint-05-documentation-ux.md  sprint-05-slsa-compliance.md  sprint-06-openssf-best-practices-badge.md  sprint-06-retrospective.md  sprint-07-metadata-integration.md  sprint-07-retrospective.md  sprint-08-integration-testing.md  sprint-09-juxlib-migration.md
docs/tutorials/: custom-signing-workflows.md  first-signed-report.md  integration-testing.md  quick-start.md  setting-up-signing-keys.md
examples/with-metadata/: conftest.py  test_example.py
pytest_jux/: __init__.py  api_client.py  canonicalizer.py  config.py  errors.py  metadata.py  plugin.py  signer.py  storage.py  verifier.py
pytest_jux/commands/: cache.py  inspect.py  keygen.py  publish.py  sign.py  verify.py
scripts/: quickstart.sh  test_docs.py
tests/: conftest.py  test_api_client.py  test_canonicalizer.py  test_config.py  test_metadata.py  test_metadata_integration.py  test_plugin.py  test_shared_fixtures.py  test_signer.py  test_storage.py  test_verifier.py
tests/commands/: __init__.py  test_cache.py  test_config_cmd.py  test_inspect.py  test_keygen.py  test_publish.py  test_sign.py  test_verify.py
tests/fixtures/: README.md
tests/fixtures/junit_xml/: failing.xml  namespaced.xml  passing.xml  simple.xml
tests/fixtures/keys/: README.md  ecdsa_p256.crt  ecdsa_p256.pem  ecdsa_p256.pub  rsa_2048.crt  rsa_2048.pem  rsa_2048.pub
tests/integration/: __init__.py  test_api_publishing.py
tests/security/: __init__.py  test_signature_attacks.py
